SERVER-38716 fix $geoNear and $text within $lookup sub-pipeline