src/mongo/db/pipeline/document_source_geo_near.h
@@ -64,7 +64,8 @@ public:
      * executing a pipeline, so this method should never be called.
      */
     GetNextResult getNext() final {
-        MONGO_UNREACHABLE;
+        // TODO: Replace with a MONGO_UNREACHABLE as part of SERVER-38995.
+        uasserted(51048, "DocumentSourceGeoNear's getNext should never be called");
     }
 
     Value serialize(boost::optional<ExplainOptions::Verbosity> explain = boost::none) const final;
