src/mongo/db/pipeline/document_source_lookup.cpp
@@ -736,7 +736,12 @@ DepsTracker::State DocumentSourceLookUp::getDependencies(DepsTracker* deps) cons
         // We will use the introspection pipeline which we prebuilt during construction.
         invariant(_parsedIntrospectionPipeline);
 
-        DepsTracker subDeps(deps->getMetadataAvailable());
+        // We are not attempting to enforce that any referenced metadata are in fact available,
+        // this is done elsewhere. We only need to know what variable dependencies exist in the
+        // subpipeline for the top-level pipeline. So without knowledge of what metadata is in fact
+        // available, we "lie" and say that all metadata is available to avoid tripping any
+        // assertions.
+        DepsTracker subDeps(DepsTracker::kAllMetadataAvailable);
 
         // Get the subpipeline dependencies. Subpipeline stages may reference both 'let' variables
         // declared by this $lookup and variables declared externally.
