src/mongo/db/pipeline/document_source_sequential_document_cache.cpp
@@ -102,7 +102,14 @@ Pipeline::SourceContainer::iterator DocumentSourceSequentialDocumentCache::doOpt
     auto varIDs = pExpCtx->variablesParseState.getDefinedVariableIDs();
 
     auto prefixSplit = container->begin();
-    DepsTracker deps;
+
+    // In the context of this optimization, we are only interested in figuring out
+    // which external variables are referenced in the pipeline. We are not attempting
+    // to enforce that any referenced metadata are in fact available, this is done
+    // elsewhere. So without knowledge of what metadata is in fact available, here
+    // we "lie" and say that all metadata is available to avoid tripping any
+    // assertions.
+    DepsTracker deps(DepsTracker::kAllMetadataAvailable);
 
     // Iterate through the pipeline stages until we find one which references an external variable.
     for (; prefixSplit != container->end(); ++prefixSplit) {
